--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^13.0.2"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.9.1"
+        "bootstrap-icons": "^1.9.1",
+        "url-loader": "^4.1.1"
     }
 }
